# memex

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-mcp.yml  publish.yml
memex/: cli.py  server.py
tests/: conftest.py  test_cli.py  test_server.py
