[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memex"
version = "0.1.0"
description = "Persistent session memory for Claude Code — local SQLite, no LLMs, no network"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.0"]

[project.urls]
Repository = "https://github.com/pragneshbagary/memex"
Issues = "https://github.com/pragneshbagary/memex/issues"

[project.scripts]
memex = "memex.cli:main"
