[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-memex"
version = "0.1.1"
description = "Persistent session memory for Claude Code — local SQLite, no LLMs, no network"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.0"]

[project.urls]
Repository = "https://github.com/pragneshbagary/memex"
Issues = "https://github.com/pragneshbagary/memex/issues"

[tool.hatch.build.targets.wheel]
packages = ["memex"]

[project.scripts]
memex = "memex.cli:main"
